src/test/test-models/good/keywords-if.stan
parameters {
  real iffy;
}
model {
  iffy ~ normal(0,1);
}
