src/test/test-models/bad/reserved/const_cast.stan
data {
  real const_cast;
}
model {
}
